--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.vbanking.app.simulator" "\0"
+            VALUE "CompanyName", "com.vbanking.simulator.application" "\0"
             VALUE "FileDescription", "banking_app" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "banking_app" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.vbanking.app.simulator. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 com.vbanking.simulator.application. All rights reserved." "\0"
             VALUE "OriginalFilename", "banking_app.exe" "\0"
             VALUE "ProductName", "banking_app" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
