--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,17 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   hive: ^2.2.3
+  flutter_inappwebview:
   url_launcher:
+  overlay_support: ^2.1.0
+  http:
+  firebase_core: ^2.1.1
+  firebase_messaging: ^14.2.2
+  flutter_local_notifications: ^9.8.0+1
   hive_flutter: ^1.1.0
   in_app_review:
+  dio:
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
